--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,5 +47,6 @@
 <script src="{{ . | relURL }}"></script>
 {{- end }}
 {{- partial "mathjax.html" . -}}
+{{- partial "katex.html" . -}}
 </body>
 </html>
