--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,11 +1,40 @@
 {{ if or (.Paginator.HasPrev) (.Paginator.HasNext) }}
 <div class="pagination">
-	{{- if .Paginator.HasPrev }}
-	<a class="pagination__item pagination__item--prev btn" href="{{ .Paginator.Prev.URL }}">«</a>
-	{{- end }}
-	<span class="pagination__item pagination__item--current">{{ .Paginator.PageNumber }}/{{ .Paginator.TotalPages }}</span>
-	{{- if .Paginator.HasNext }}
-	<a class="pagination__item pagination__item--next btn" href="{{ .Paginator.Next.URL }}">»</a>
-	{{- end }}
+
+  {{ with .Paginator.Prev }}
+  <a class="pagination__item pagination__item--prev btn" href='{{ .URL }}'>«</a>
+  {{ end }}
+
+  {{- $.Scratch.Set "hasPrevDots" false -}}
+  {{- $.Scratch.Set "hasNextDots" false -}}
+
+  {{ range .Paginator.Pagers }}
+    {{ if ( eq . $.Paginator ) }}
+    <span aria-current='page' class="pagination__item pagination__item--current">
+      {{- .PageNumber -}}
+    </span>
+    {{ else if or ( or ( eq . $.Paginator.First ) ( eq . $.Paginator.Prev ) ) ( or ( eq . $.Paginator.Next ) ( eq . $.Paginator.Last ) ) }}
+    <a class="pagination__item" href='{{ .URL }}'>
+      {{- .PageNumber -}}
+    </a>
+    {{ else }}
+      {{ if and ( not ( $.Scratch.Get "hasPrevDots" ) ) ( lt .PageNumber $.Paginator.PageNumber )  }}
+        {{- $.Scratch.Set "hasPrevDots" true -}}
+        &nbsp;
+        <span class='page-link dots'>&hellip;</span>
+        &nbsp;
+      {{ else if and ( not ( $.Scratch.Get "hasNextDots" ) ) ( gt .PageNumber $.Paginator.PageNumber ) }}
+        {{- $.Scratch.Set "hasNextDots" true -}}
+        &nbsp;
+        <span class='page-link dots'>&hellip;</span>
+        &nbsp;
+      {{ end }}
+    {{ end }}
+  {{ end }}
+
+  {{ with .Paginator.Next }}
+  <a class="pagination__item pagination__item--next btn" href='{{ .URL }}'>»</a>
+  {{ end }}
+
 </div>
 {{ end }}
