--- a/layouts/partials/post_meta/date.html
+++ b/layouts/partials/post_meta/date.html
@@ -1,4 +1,4 @@
-{{- if not .Date.IsZero }}
+{{- if and (not .Date.IsZero) (.IsPage) }}
 <div class="meta__item-datetime meta__item">
 	{{ partial "svg/time.svg" (dict "class" "meta__icon") }}
 	<time class="meta__text" datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format ( .Site.Params.dateformat | default "January 02, 2006") }}</time>
